styles/for_time.css
/* =========================
   CONTENEDOR
========================= */
.container {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 20px;
  box-sizing: border-box;
}

/* =========================
   SETUP
========================= */
.setup {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 25px;
  width: 100%;
  max-width: 500px;
}

.time-inputs {
  display: flex;
  flex-direction: column;
  gap: 20px;
  width: 100%;
}

.time-row {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 15px;
  width: 100%;
}

.time-row input {
  width: 100px;
  padding: 15px;

  font-size: 20px;
  text-align: center;

  background: black;
  color: #eb7628;

  border: 2px solid #eb7628;
  border-radius: 8px;

  outline: none;
}

.time-row span {
  color: #eb7628;
  font-weight: bold;
  font-size: 18px;
  letter-spacing: 1px;
  min-width: 100px;
  text-align: right;
}

/* START BUTTON */
.start-button {
  padding: 16px 40px;

  font-size: 20px;
  font-weight: bold;

  background: black;
  color: #eb7628;

  border: 2px solid #eb7628;
  border-radius: 8px;

  cursor: pointer;

  transition: 0.2s;
  width: 95%;
}

.start-button:hover {
  background: #eb7628;
  color: black;
}

/* ERROR */
.error-message {
  color: #ff4d4d;
  font-size: 16px;
  min-height: 20px;
  text-align: center;
}

/* =========================
   COUNTDOWN
========================= */
.countdown-screen,
.timer-screen {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}

#countdownDisplay {
  font-size: 15vw;
  font-weight: bold;
  color: #eb7628;
}

/* TIMER */
#timerDisplay {
  font-size: 15vw;
  font-weight: bold;
  color: #eb7628;

  font-variant-numeric: tabular-nums;
}

/* OCULTO */
.hidden {
  display: none !important;
}

